# SAR

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  sarmakeitworking.txt  sarmakeitworking.txt~
old_stuff/: CMakeLists.txt
old_stuff/BackUp/demo_chessboard/: sar_chessboard.cpp  sar_chessboard.cpp~  sar_chessboard2.cpp  sar_chessboard2.cpp~  sar_chessboard3.cpp  sar_chessboard3.cpp~
src/: KKK.pgm  calibrate.cpp  calibrate.cpp~  calibration2.cpp  calibration2_old.cpp  icgdemo.cpp  laser_calibration.cpp  perspective.cpp  prova.cpp  rectangleRecongnition.cpp  sar _ros_bo.cpp  sar.cpp  sar_ros.cpp  sfm_me.cpp  spatially_ar.cpp  spatially_ar1.cpp  spatially_ar_draft.cpp  sub.cpp  ye_sar.cpp  ye_sar2.cpp
src/pictures/: cb1280_800.xcf  projectorDesktop.xcf
